- Smart EQ 453:
    add 5min Booster preheat cool
    add TPMS pressure
    add Internal Temp
    add Doors status
- Separate Polling from the Vehicle implementation
  New commands:
    poller status
    poller pause
    poller resume
    poller trace on|txrx|all|off|status-- Control verbose logging
    poller times on|off|status|reset   -- Control poller timing metrics
- Duktape support for Metric Age / Stale
  New Duktape methods
    OvmsMetrics.IsStale
    OmvsMetrics.IsFresh
    OvmsMetrics.Age
2024-03-23 MB   3.3.004  OTA release
- MG EV Added support for MG5 (2020 - 2023) Short Range
- MG EV Added support for MG ZS EV (2023 - ) and MG5 (2020 - 2023) Long Range
- OVMS Server v3 metrics filtering
  New configs:
    [server.v3] metrics.include         -- Comma-separated list of metric names (with possible wildcard) matching metrics to send
    [server.v3] metrics.exclude         -- Comma-separated list of metric names (with possible wildcard) matching metrics to not send
- Renault Zoe Phase 2: Initial support
- Improved output of bms shell command for narrow windows.
  New commands:
    bms volt                            -- Output only voltage info if available
    bms temp                            -- Output only temperature info if available
- Hyundai Ioniq 5: Initial support
- Support for specifying units in scripts
  New commands:
    metrics units                       -- Display available unit identifiers
    metrics get                         -- Get at a particular metric value (with a specified unit)
  Extended commands:
    metrics set                         -- Support setting with a specified unit
  Extend functions
    OvmsMetrics.Value                   -- Optionally specify a unit (and make 'decode' work) and to get values with units.
    OvmsMetrics.GetValues               -- Optionally specify a unit to get values with units. 
    OvmsMetrics.AsFloat                 -- Optionally specify a unit
  New DukTape function