@@ -1062,6 +1062,91 @@ options in the App, as well as by executing the ``homelink`` shell command.
 To load this plugin automatically on boot, add the code to ``ovmsmain.js``, either
 inline or by loading a lib module (see `Persistent JavaScript`_).
 
+OvmsPoller
+^^^^^^^^^^
+The Ovms Poller object represents the poller sub-system. It contains the following methods:
+
+- ``ispaused = OvmsPoller.GetPaused()``: Return true if the poller is paused by the system/user.
+- ``ispaused = OvmsPoller.GetUserPaused()``: Return true if the poller is paused by the user.
+- ``OvmsPoller.Pause()``: Pause the poller (adds User poller pause)
+- ``OvmsPoller.Resume()``: Remove the User poller pause.
+
+- ``OvmsPoller.Trace({ poller: true, txrx: false})``: Enable traces for poller/txrx tasks.
+    Enabling trace still requires that 'Verbose' or 'Debug' levels (depending) for the
+    'vehicle-poll' debug tags are set.
+    The flag ``poller`` refers to the poller task itself (relatively safe) and ``txrx`` refers to the Can TX/RX task
+    (not safe, especially for some cars).
+- ``tracemodes = OvmsPoller.GetTraceStatus()``: Return the current trace mode for the respective 'tasks'. Eg
+    .. code-block:: javascript
+   { "poller": true, "txrx": false }
+
+The poller object also contains a ``Times`` property for the OBD Poll-Time tracing
+which contains the following methods:
+- ``isrunning = OvmsPoller.Times.GetStarted()``: Returns true if the time-tracing is enabled
+- ``OvmsPoller.Times.Start``: Starts the timer-tracing
+- ``OvmsPoller.Times.Stop``: Stops the timer-tracing
+- ``OvmsPoller.Times.Reset()``: Reset the timers (doesn't affect their current state).
+- ``OvmsPoller.Times.GetStatus()``: Gets the status of the various times. This returns an object
+    of this format:
+    .. code-block:: javascript
+    return_value = {
+      "started": true,
+      "items": {
+        "Poll:PRI" : {
+          "count_hz":    1,
+          "avg_util_pm": 0.529,
+          "peak_util_pm":0.652,
+          "avg_time_ms": 0.052,
+          "peak_time_ms":1.516
+        },
+        "Poll:SRX": {
+          "count_hz":    1.47,
+          "avg_util_pm": 0.302,
+          "peak_util_pm":0.44,
+          "avg_time_ms": 0.02,
+          "peak_time_ms":0.573
+        },
+        "RxCan1[778]": {
+          "count_hz":    0.74,
+          "avg_util_pm": 0.427,
+          "peak_util_pm":0.826,
+          "avg_time_ms": 0.063,
+          "peak_time_ms":1.872
+        },
+        "RxCan1[7a8]": {
+          "count_hz":    0.35,
+          "avg_util_pm": 0.183,
+          "peak_util_pm":0.355,
+          "avg_time_ms": 0.052,
+          "peak_time_ms":1.382
+        },
+        "TxCan1[7b3]": {
+          "count_hz":    0.07,
+          "avg_util_pm": 0.005,
+          "peak_util_pm":0.01,
+          "avg_time_ms": 0.007,
+          "peak_time_ms":0.099
+        },
+        "TxCan1[7c6]": {
+          "count_hz":    0,
+          "avg_util_pm": 0,
+          "peak_util_pm":0.009,
+          "avg_time_ms": 0.004,
+          "peak_time_ms":0.098
+        },
+        "Cmd:State": {
+          "count_hz":    0,
+          "avg_util_pm": 0,
+          "peak_util_pm":0,
+          "avg_time_ms": 0.011,
+          "peak_time_ms":0.109
+        }
+      },
+
+      "tot_count_hz": 11.76,
+      "tot_util_pm": 6.247,
+      "tot_time_ms": 4.628
+    };
 
 --------------
 Test Utilities
